logs/Slang/generated/keywords/5.6.2--keyword_tri0.sv.log
name: tri0
description: The 'tri0' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_tri0.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_tri0.sv:8:8: error: expected declarator
    bit tri0;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_tri0.sv:8:13: error: expected declarator
    bit tri0;
            ^
